unpackaged/main/default/objects/Meta__c/fields/MetaFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>MetaFraccionamiento__c</fullName>
    <label>Meta Fraccionamiento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>