unpackaged/main/default/objects/Meta__c/fields/MetaIndividual__c.field-meta.xml
<CustomField>
    <fullName>MetaIndividual__c</fullName>
    <label>Meta Individual</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>