unpackaged/main/default/objects/Meta__c/fields/MiembrosFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>MiembrosFraccionamiento__c</fullName>
    <label>Miembros Fraccionamiento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>