unpackaged/main/default/objects/Meta__c/fields/Nomemp_met__c.field-meta.xml
<CustomField>
    <fullName>Nomemp_met__c</fullName>
    <label>Nombre del Empleado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>