unpackaged/main/default/objects/Meta__c/fields/Nomequi_met__c.field-meta.xml
<CustomField>
    <fullName>Nomequi_met__c</fullName>
    <label>Nombre del Equipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>