unpackaged/main/default/objects/Meta__c/fields/Periodo_met__c.field-meta.xml
<CustomField>
    <fullName>Periodo_met__c</fullName>
    <label>Periodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>