unpackaged/main/default/objects/Meta__c/fields/RealFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>RealFraccionamiento__c</fullName>
    <label>Real Fraccionamiento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>