unpackaged/main/default/objects/Meta__c/fields/RealIndividual__c.field-meta.xml
<CustomField>
    <fullName>RealIndividual__c</fullName>
    <label>Real Individual</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>