unpackaged/main/default/objects/Meta__c/fields/Rolvta__c.field-meta.xml
<CustomField>
    <fullName>Rolvta__c</fullName>
    <label>Rol de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>